fixed height for wordcloud css. Looks very nice on mobile now. Fixed Header bolding

--- a/chefboyrd/static/css/main.css
+++ b/chefboyrd/static/css/main.css
@@ -60,8 +60,8 @@ prediction-table {
 }
 
 #wordcloud {
-  width:80%;
-  height:350px;
+  width:100%;
+  height:450px;
   margin:0 auto;
   font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
